[tool.poetry]
name = "data-marketplace-retrieval"
version = "0.1.0"
description = ""
authors = ["Luca Cassani <luca.cassani1997@gmail.com>"]
readme = "README.md"
packages = [{ include = "data_marketplace_retrieval" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
jupyter = "^1.0.0"
spacy = "^3.5.1"
nltk = "^3.8.1"
transformers = "^4.27.3"
evaluate = "^0.4.0"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
elasticsearch = "^8.6.2"
urllib3 = "^1.26.15"
gensim = "^4.3.1"
thinc-apple-ops = "^0.1.3"
python-terrier = "^0.9.2"
beautifulsoup4 = "^4.12.1"
accelerate = "^0.18.0"
protobuf = "3.20.3"
sumy = "^0.11.0"
coreferee = "^1.4.1"
numpy = "1.26.4"
bert-extractive-summarizer = "^0.10.1"

[tool.poetry.group.macos]
optional = true
[tool.poetry.group.macos.dependencies]
tensorflow-metal = "^0.8.0"
tensorflow-macos = "^2.12.0"
torch = { url = "https://files.pythonhosted.org/packages/4d/80/760f3edcf0179c3111fae496b97ee3fa9171116b4bccae6e073efe928e72/torch-2.0.0-cp39-none-macosx_11_0_arm64.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
